--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -53,7 +53,7 @@
 
               <!-- if login -->
               <li class="nav-item">
-                <a href="#" class="nav-link" data-toggle="modal" data-target="#modal-xl">
+                <a href="#" class="nav-link" data-toggle="modal" data-target="#ModalBook">
                   <i class="nav-icon fas fa-plus"></i>
                   <p>
                     Add Book
