--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <!-- Flickity -->
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" type="text/css" href="extra_css.css">
+    <!-- Tempusdominus Bbootstrap 4 -->
+    <link rel="stylesheet" href="./plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+    <!-- daterange picker -->
+    <link rel="stylesheet" href="./plugins/daterangepicker/daterangepicker.css">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -85,28 +89,104 @@
         <div class="content-wrapper">
             <!-- Content Header (Page header) -->
             <!-- /.modal -->
-            <div class="modal fade" id="modal-xl">
-                <div class="modal-dialog modal-xl">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Extra Large Modal</h4>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p>One fine body&hellip;</p>
-                        </div>
-                        <div class="modal-footer justify-content-between">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                <div class="modal fade" id="BerhasilModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
+                aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                                <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Save Complete!</h5>
+                                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">×</span>
+                                </button>
+                                </div>
+                            <div class="modal-body"><img class="check" src="./assets/check.png"></div>
+                            <p>Data already saved</p>
+                            <div class="modal-footer">
+                            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+                            </div>
                         </div>
                     </div>
-                    <!-- /.modal-content -->
-                </div>
-                <!-- /.modal-dialog -->
             </div>
-            <!-- /.modal -->
+            <div class="modal fade" id="ModalBook" onclick="showModal()" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
+            aria-hidden="true">
+                <div class="modal-dialog modal-xl" role="document">
+                    <div class="modal-content" id="edit-module">
+                        <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Add Book</h5>
+                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                        </div>
+                        <div class="modal-body">
+                        <div class="row">
+                            <div class="col-lg-2">
+                            <label class="title-module">Url Image</label>
+                            </div>
+                            <div class="col-lg-10">
+                            <input type="text" id="url" name="url" class="form-control" placeholder="/assets/background.png">
+                            </div>
+                        </div>
+                        <hr class="divider">
+                        <div class="row">
+                            <div class="col-lg-2">
+                            <label class="title-module">Book Tittle</label>
+                            </div>
+                            <div class="col-lg-10">
+                            <input type="text" id="title" name="title" class="form-control" placeholder="Gunung">
+                            </div>
+                        </div>
+                        <hr class="divider">
+                        <div class="row">
+                            <div class="col-lg-2">
+                            <label class="title-module">Date:</label>
+                            </div>
+                            <div class="col-lg-10">
+                                <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
+                                <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
+                                <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                        <hr class="divider">
+                        <div class="row">
+                            <div class="col-lg-2">
+                            <label class="title-module">Category</label>
+                            </div>
+                            <div class="col-lg-4">
+                            <div class="form-group">
+                                <select class="form-control">
+                                <option value="" >Choose Category</option>
+                                <option value="Novel" >Novel</option>
+                                <option value="Comic Book" >Comic Book</option>
+                                <option value="Detective and Mystery" >Detective and Mystery</option>
+                                <option value="Historical Fiction" >Historical Fiction</option>
+                                <option value="Horror" >Horror</option>
+                                <option value="literary Fiction" >literary Fiction</option>
+                                </select>
+                            </div>
+                            </div>
+                        </div>
+                        <hr class="divider">
+                        <div class="row">
+                            <div class="col-lg-2">
+                                <label class="title-module">Description</label>
+                            </div>
+                            <hr class="divider">
+                            <div class="col-lg-10">
+                            <textarea name="txtcomment" class="ckeditor" cols="50" rows="5" placeholder="Type Here"></textarea>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="modal-footer">
+                        <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+                        <a class="btn btn-warning" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
+                            data-target="#BerhasilModal2">Save</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Main content -->
             <section class="content">
 
@@ -283,14 +363,25 @@
     <script type="text/javascript" src="./dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script type="text/javascript" src="./dist/js/demo.js"></script>
-
+    <!-- Ckeditor -->
+    <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
+    <!-- date-range-picker -->
+    <script src="./plugins/daterangepicker/daterangepicker.js"></script>
+    <!-- date-range-picker -->
+    <script src="./plugins/daterangepicker/daterangepicker.js"></script>
     <!-- extra JS to include HTML -->
     <script src="js.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-
+    <!-- InputMask -->
+    <script src="./plugins/moment/moment.min.js"></script>
+    <script src="./plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
     <!-- Flickity -->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script type="text/javascript" src="search.js" ></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="./plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <!-- Modul AddBook -->
+    <script type="text/javascript" src="modal.js"></script>
 </body>
 
 </html>
