fixed list book content and added styling

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <h2 class="title-container" >List Book</h2>
                         </div>
                         <div class="col-12">
-                            <div class="filter-container p-0 row">
+                            <div class="filter-container p-0 row custom-flex">
                                 <div class="filtr-item col-sm-4 list-book">
                                     <a href="detail.html">
                                         <img src="./assets/books/brief-answer-to-the-big-questions.jpg"
@@ -339,6 +339,20 @@
                                     <div class="list-book-detail" >
                                         <div class="title-book" >
                                             Fantastic Beasts
+                                        </div>
+                                        <div class="desc-book" >
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="filtr-item col-sm-4 list-book">
+                                    <a href="detail.html">
+                                        <img src="./assets/books/brief-answer-to-the-big-questions.jpg" class="img-fluid img-book"
+                                            alt="white sample" />
+                                    </a>
+                                    <div class="list-book-detail" >
+                                        <div class="title-book" >
+                                            Brief Answer to The Big Question
                                         </div>
                                         <div class="desc-book" >
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio
