--- a/detail.html
+++ b/detail.html
@@ -23,9 +23,6 @@
     <!-- Tempusdominus Bbootstrap 4 -->
     <link rel="stylesheet" href="./plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
 
-    <!-- Flickity -->
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-    <link rel="stylesheet" type="text/css" href="extra_css.css">
 
 
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick.css">
@@ -96,7 +93,7 @@
               <img class="big-preview" width="1600px" height="1200px">
               <div class="menu-right">
                 <ul class="menuhead">
-                  <li><a href="#" data-toggle="modal" data-target="#EditModal">Edit</a></li>
+                  <li><a href="#" onclick="showModal('edit')" >Edit</a></li>
                   <li><a href="#" data-toggle="modal" data-target="#deleteModal">Delete</a></li>
                 </ul>
                 <img class="small-preview" src="./assets/covernya2.png">
@@ -115,13 +112,13 @@
 
           <div class="row">
             <div class="col-sm-6">
-              <h1 class="titletext">Gunung</h1>
+              <h1 class="titletext">Dilan 1991</h1>
             </div>
             <div class="col-sm-6">
               <h1 class="statustext">Available</h1>
             </div>
           </div>
-          <p class="date">10 November 2020</p>
+          <p class="date">08 November 2020</p>
           <div class="row">
             <div class=col-sm-8>
               <p class="content">
@@ -267,12 +264,11 @@
         </div>
       </div>
     </div>
-      <div class="modal fade" id="EditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-        aria-hidden="true">
+      <div class="modal fade" id="ModalBook" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
           <div class="modal-content" id="edit-module">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Edit Data</h5>
+              <h5 class="modal-title" id="modal-title">Edit Data</h5>
               <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">×</span>
               </button>
@@ -283,7 +279,7 @@
                   <label class="title-module">Url Image</label>
                 </div>
                 <div class="col-lg-10">
-                  <input type="text" id="url" name="url" class="form-control" placeholder="/assets/background.png">
+                  <input type="text" name="url" class="form-control" placeholder="/assets/background.png">
                 </div>
               </div>
               <hr class="divider">
@@ -291,8 +287,8 @@
                 <div class="col-lg-2">
                   <label class="title-module">Book Tittle</label>
                 </div>
-                <div class="col-lg-10">
-                  <input type="text" id="title" name="title" class="form-control" placeholder="Gunung">
+                <div class="col-lg-4">
+                  <input type="text" name="title" class="form-control" placeholder="Dilan 1991">
                 </div>
               </div>
               <hr class="divider">
@@ -300,9 +296,9 @@
                 <div class="col-lg-2">
                 <label class="title-module">Date:</label>
                 </div>
-                <div class="col-lg-10">
+                <div class="col-lg-4">
                     <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
-                      <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
+                      <input type="text" name="date" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
                       <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
                           <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                       </div>
@@ -316,7 +312,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="form-group">
-                    <select class="form-control">
+                    <select class="form-control" name="category" >
                       <option value="" >Choose Category</option>
                       <option value="Novel" >Novel</option>
                       <option value="Comic Book" >Comic Book</option>
@@ -335,7 +331,7 @@
                 </div>
                 <hr class="divider">
                 <div class="col-lg-10">
-                  <textarea name="txtcomment" class="ckeditor" cols="50" rows="5" placeholder="Type Here"></textarea>
+                  <textarea name="description" class="ckeditor" cols="50" rows="5" placeholder="Type Here"></textarea>
                 </div>
               </div>
             </div>
@@ -364,7 +360,7 @@
                 <label class="title-module">Username:</label>
               </div>
               <div class="col-lg-10">
-                <input type="text" id="url" name="url" class="form-control" readonly placeholder="Niki Zefanya">
+                <input type="text"  name="name" class="form-control" readonly placeholder="Niki Zefanya">
               </div>
             </div>
             <hr class="divider">
@@ -406,13 +402,12 @@
     </div>
       <!-- /.modal -->
 
-  <!-- ./wrapper -->
   <!-- jQuery -->
   <script src="./plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
   <script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- overlayScrollbars -->
-  <script src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+  <!-- <script src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
   <!-- AdminLTE App -->
   <script src="./dist/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
@@ -420,9 +415,6 @@
   <script src="js.js" type="text/javascript"></script>
   <!-- Ckeditor -->
   <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
-  <!-- date-range-picker -->
-  <script src="./plugins/daterangepicker/daterangepicker.js"></script>
-
   <!-- InputMask -->
   <script src="./plugins/moment/moment.min.js"></script>
   <script src="./plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
@@ -430,6 +422,7 @@
   <script src="./plugins/daterangepicker/daterangepicker.js"></script>
   <!-- Tempusdominus Bootstrap 4 -->
   <script src="./plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script type="text/javascript" src="modal.js"></script>
 </body>
 
 </html>
