--- a/history.html
+++ b/history.html
@@ -22,16 +22,10 @@
   <link rel="stylesheet" type="text/css" href="./plugins/slick/slick-theme.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="./home/style.css">
-  <!-- Flickity -->
-  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 
   <link rel="stylesheet" type="text/css" href="home/history.css">
   <link rel="stylesheet" type="text/css" href="home/sidebar.css">
   <link rel="icon" href="./assets/favicons.ico">
-  <!-- Latest compiled and minified CSS
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
-
 
 </head>
 
@@ -136,7 +130,7 @@
 
                   <!-- if login -->
                   <li class="nav-item">
-                    <a href="#" class="nav-link" data-toggle="modal" data-target="#modal-xl">
+                    <a href="#" class="nav-link" onclick="showModal('add')">
                       <i class="nav-icon fas fa-plus"></i>
                       <p>
                         Add Book
@@ -179,26 +173,84 @@
 
       <!-- Content Header (Page header) -->
       <!-- /.modal -->
-      <div class="modal fade" id="modal-xl">
-        <div class="modal-dialog modal-xl">
-          <div class="modal-content">
+      <div class="modal fade" id="ModalBook" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+          <div class="modal-content" id="edit-module">
             <div class="modal-header">
-              <h4 class="modal-title">Extra Large Modal</h4>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+              <h5 class="modal-title" id="modal-title">Edit Data</h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
               </button>
             </div>
             <div class="modal-body">
-              <p>One fine body&hellip;</p>
+              <div class="row">
+                <div class="col-lg-2">
+                  <label class="title-module">Url Image</label>
+                </div>
+                <div class="col-lg-10">
+                  <input type="text" name="url" class="form-control" placeholder="/assets/background.png">
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-lg-2">
+                  <label class="title-module">Book Tittle</label>
+                </div>
+                <div class="col-lg-4">
+                  <input type="text" name="title" class="form-control" placeholder="Dilan 1991">
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-lg-2">
+                <label class="title-module">Date:</label>
+                </div>
+                <div class="col-lg-4">
+                    <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
+                      <input type="text" name="date" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
+                      <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
+                          <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-lg-2">
+                  <label class="title-module">Category</label>
+                </div>
+                <div class="col-lg-4">
+                  <div class="form-group">
+                    <select class="form-control" name="category" >
+                      <option value="" >Choose Category</option>
+                      <option value="Novel" >Novel</option>
+                      <option value="Comic Book" >Comic Book</option>
+                      <option value="Detective and Mystery" >Detective and Mystery</option>
+                      <option value="Historical Fiction" >Historical Fiction</option>
+                      <option value="Horror" >Horror</option>
+                      <option value="literary Fiction" >literary Fiction</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-lg-2">
+                    <label class="title-module">Description</label>
+                </div>
+                <hr class="divider">
+                <div class="col-lg-10">
+                  <textarea name="description" class="ckeditor" cols="50" rows="5" placeholder="Type Here"></textarea>
+                </div>
+              </div>
             </div>
-            <div class="modal-footer justify-content-between">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+              <a class="btn btn-warning" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
+                data-target="#BerhasilModal2">Save</a>
             </div>
           </div>
-          <!-- /.modal-content -->
         </div>
-        <!-- /.modal-dialog -->
       </div>
       <!-- /.modal -->
       <section class="content-header">
@@ -508,7 +560,7 @@
   <!-- Bootstrap 4 -->
   <script type="text/javascript" src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- overlayScrollbars -->
-  <script type="text/javascript" src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+  <!-- <script type="text/javascript" src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
   <!-- AdminLTE App -->
   <script type="text/javascript" src="./dist/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
@@ -516,14 +568,17 @@
 
   <!-- extra JS to include HTML -->
   <script src="js.js" type="text/javascript"></script>
-  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-  <script src="./plugins/slick/slick.js" type="text/javascript" charset="utf-8"></script>
-
-
-  <!-- Flickity -->
-  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-  <script src="home/js/historyview.js"></script>
-  
+  <script src="./home/js/historyview.js"></script>
+  <!-- Ckeditor -->
+  <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
+  <!-- InputMask -->
+  <script src="./plugins/moment/moment.min.js"></script>
+  <script src="./plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
+  <!-- date-range-picker -->
+  <script src="./plugins/daterangepicker/daterangepicker.js"></script>
+  <!-- Tempusdominus Bootstrap 4 -->
+  <script src="./plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script type="text/javascript" src="modal.js"></script>
 
   
 
