--- a/detail.html
+++ b/detail.html
@@ -136,8 +136,7 @@
             </div>
           </div>
           <div class="borrowbutton">
-            <a id="button_borrow" class="btn btn-warning" href="#" onclick="showModal1('borrow')">Borrow</a>
-            <a id="button_borrow2" class="btn btn-warning" href="#" onclick="showModal1('borrowed')">Cancel</a>            
+            <button id="button_borrow" value="borrow" class="btn btn-warning" href="#" onclick="showModal1(value)">Borrow</button>                  
           </div>
         </div>
       </section>
