fixed responsive mode in recommended section

--- a/detail.html
+++ b/detail.html
@@ -143,7 +143,7 @@
       <section>
         <!--Adding list books-->
         <div class="list-title">
-          <h4>Recomended</h4><br>
+          <h4>Recommended</h4><br>
         </div>
         <div class="row" id="recomended">
           <div class="col-xs-4 col-sm-4 col-lg-4">
