--- a/detail.html
+++ b/detail.html
@@ -153,7 +153,7 @@
                 <h5 class="recommend-title">Dilan 1991</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
                   ullam officia ... </p>
-                <a class="recomendedcard1 btn btn-primary" href="#" class="btn btn-primary">Read More</a>
+                <a class="recomendedcard-read btn btn-primary" href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -165,7 +165,7 @@
                 <h5 class="recommend-title">Seni Hidup Minimalis</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
                   ullam officia ... </p>
-                <a class="recomendedcard1 btn btn-primary" href="#" class="btn btn-primary">Read More</a>
+                <a class="recomendedcard-read btn btn-primary" href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
                 <h5 class="recommend-title">Milea</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
                   ullam officia ... </p>
-                <a class="recomendedcard1 btn btn-primary" href="#">Read More</a>
+                <a class="recomendedcard-read btn btn-primary" href="#">Read More</a>
               </div>
             </div>
           </div>
