create Validation in Modal

--- a/history.html
+++ b/history.html
@@ -246,12 +246,11 @@
             </div>
             <div class="modal-footer">
               <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-              <a class="btn btn-warning" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
-                data-target="#BerhasilModal2">Save</a>
+              <button id="confirmBook" class="btn btn-warning" onclick="confirmBook()" >Save</button>
             </div>
           </div>
         </div>
-      </div>
+    </div>
       <!-- /.modal -->
       <section class="content-header">
         <!-- /.container-fluid -->
