--- a/index.html
+++ b/index.html
@@ -93,23 +93,22 @@
         <div class="content-wrapper">
             <!-- Content Header (Page header) -->
             <!-- /.modal -->
-                <div class="modal fade" id="BerhasilModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-                aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                                <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Save Complete!</h5>
-                                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">×</span>
-                                </button>
-                                </div>
-                            <div class="modal-body"><img class="check" src="./assets/check.png"></div>
-                            <p>Data already saved</p>
-                            <div class="modal-footer">
-                            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+            <div class="modal fade" id="BerhasilModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Save Complete!</h5>
+                            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">×</span>
+                            </button>
                             </div>
+                        <div class="modal-body"><img class="check" src="./assets/check.png"></div>
+                        <p>Data already saved</p>
+                        <div class="modal-footer">
+                        <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
                         </div>
                     </div>
+                </div>
             </div>
             <div class="modal fade" id="ModalBook" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl" aria-hidden="true">
                 <div class="modal-dialog modal-xl" role="document">
@@ -184,12 +183,11 @@
                     </div>
                     <div class="modal-footer">
                       <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-                      <a class="btn btn-warning" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
-                        data-target="#BerhasilModal2">Save</a>
+                      <button id="confirmBook" class="btn btn-warning" onclick="confirmBook()" >Save</button>
                     </div>
                   </div>
                 </div>
-              </div>
+            </div>
             <!-- Main content -->
             <section class="content">
 
@@ -396,6 +394,9 @@
     <script src="./plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Modul AddBook -->
     <script type="text/javascript" src="modal.js"></script>
+
+ 
+
 </body>
 
 </html>
