--- a/detail.html
+++ b/detail.html
@@ -303,85 +303,84 @@
         </div>
       </div>
     </div>
-      <div class="modal fade" id="ModalBook" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl" aria-hidden="true">
-        <div class="modal-dialog modal-xl" role="document">
-          <div class="modal-content" id="edit-module">
-            <div class="modal-header">
-              <h5 class="modal-title" id="modal-title">Edit Data</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
+    <div class="modal fade" id="ModalBook" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content" id="edit-module">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modal-title">Edit Data</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-lg-2">
+                <label class="title-module">Url Image</label>
+              </div>
+              <div class="col-lg-10">
+                <input type="text" name="url" class="form-control" placeholder="/assets/background.png">
+              </div>
             </div>
-            <div class="modal-body">
-              <div class="row">
-                <div class="col-lg-2">
-                  <label class="title-module">Url Image</label>
-                </div>
-                <div class="col-lg-10">
-                  <input type="text" name="url" class="form-control" placeholder="">
-                </div>
+            <hr class="divider">
+            <div class="row">
+              <div class="col-lg-2">
+                <label class="title-module">Book Tittle</label>
               </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-lg-2">
-                  <label class="title-module">Book Tittle</label>
-                </div>
-                <div class="col-lg-4">
-                  <input type="text" name="title" class="form-control" placeholder="">
-                </div>
+              <div class="col-lg-4">
+                <input type="text" name="title" class="form-control" placeholder="Dilan 1991">
               </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-lg-2">
-                <label class="title-module">Date:</label>
-                </div>
-                <div class="col-lg-4">
-                    <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
-                      <input type="text" name="date" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
-                      <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
-                          <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                      </div>
-                  </div>
-                </div>
+            </div>
+            <hr class="divider">
+            <div class="row">
+              <div class="col-lg-2">
+              <label class="title-module">Date:</label>
               </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-lg-2">
-                  <label class="title-module">Category</label>
-                </div>
-                <div class="col-lg-4">
-                  <div class="form-group">
-                    <select class="form-control" name="category" >
-                      <option value="" >Choose Category</option>
-                      <option value="Novel" >Novel</option>
-                      <option value="Comic Book" >Comic Book</option>
-                      <option value="Detective and Mystery" >Detective and Mystery</option>
-                      <option value="Historical Fiction" >Historical Fiction</option>
-                      <option value="Horror" >Horror</option>
-                      <option value="literary Fiction" >literary Fiction</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-lg-2">
-                    <label class="title-module">Description</label>
-                </div>
-                <hr class="divider">
-                <div class="col-lg-10">
-                  <textarea name="description" class="ckeditor" cols="50" rows="5" placeholder="Type Here"></textarea>
+              <div class="col-lg-4">
+                  <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
+                    <input type="text" name="date" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
+                    <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
+                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                    </div>
                 </div>
               </div>
             </div>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-              <a class="btn btn-warning" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
-                data-target="#BerhasilModal2">Save</a>
+            <hr class="divider">
+            <div class="row">
+              <div class="col-lg-2">
+                <label class="title-module">Category</label>
+              </div>
+              <div class="col-lg-4">
+                <div class="form-group">
+                  <select class="form-control" name="category" >
+                    <option value="" >Choose Category</option>
+                    <option value="Novel" >Novel</option>
+                    <option value="Comic Book" >Comic Book</option>
+                    <option value="Detective and Mystery" >Detective and Mystery</option>
+                    <option value="Historical Fiction" >Historical Fiction</option>
+                    <option value="Horror" >Horror</option>
+                    <option value="literary Fiction" >literary Fiction</option>
+                  </select>
+                </div>
+              </div>
             </div>
+            <hr class="divider">
+            <div class="row">
+              <div class="col-lg-2">
+                  <label class="title-module">Description</label>
+              </div>
+              <hr class="divider">
+              <div class="col-lg-10">
+                <textarea name="description" class="ckeditor" cols="50" rows="5" placeholder="Type Here"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+            <button id="confirmBook" class="btn btn-warning" onclick="confirmBook()" >Save</button>
           </div>
         </div>
       </div>
+    </div>
       <div class="modal fade" id="BorrowModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
       aria-hidden="true">
       <div class="modal-dialog modal-md" role="document">
