remove readonly in date

--- a/detail.html
+++ b/detail.html
@@ -335,7 +335,7 @@
               </div>
               <div class="col-lg-4">
                   <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
-                    <input type="text" name="date" readonly class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
+                    <input type="text" name="date" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
                     <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                     </div>
