changed button color when hovered and view history color

--- a/detail.html
+++ b/detail.html
@@ -151,7 +151,7 @@
                 <h5 class="recommend-title">Dilan 1991</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
                   ullam officia ... </p>
-                <a class="recomendedcard-read btn btn-primary" href="#" class="btn btn-primary">Read More</a>
+                <a class="recomendedcard-read btn" href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
                 <h5 class="recommend-title">Seni Hidup Minimalis</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
                   ullam officia ... </p>
-                <a class="recomendedcard-read btn btn-primary" href="#" class="btn btn-primary">Read More</a>
+                <a class="recomendedcard-read btn" href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -175,7 +175,7 @@
                 <h5 class="recommend-title">Milea</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
                   ullam officia ... </p>
-                <a class="recomendedcard-read btn btn-primary" href="#">Read More</a>
+                <a class="recomendedcard-read btn" href="#">Read More</a>
               </div>
             </div>
           </div>
