--- a/history.html
+++ b/history.html
@@ -287,7 +287,7 @@
                   </div>
                   <div class="col-md-10">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                      <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
                         View History
                       </button>
                       <div class="dropdown-menu">
