--- a/category_management.html
+++ b/category_management.html
@@ -730,24 +730,7 @@
     <script src="assets/vendors/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
     <script src="assets/vendors/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
     <script src="assets/vendors/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-    <!-- page script -->
-    <script>
-        $(function () {
-            $("#example1").DataTable({
-                responsive: true,
-                autoWidth: false,
-            });
-            $("#example2").DataTable({
-                paging: true,
-                lengthChange: false,
-                searching: false,
-                ordering: true,
-                info: true,
-                autoWidth: false,
-                responsive: true,
-            });
-        });
-    </script>
+    <script src="assets/js/dtpage.js"></script>
 
 </body>
 
