added status column on slideshow table

--- a/payment.html
+++ b/payment.html
@@ -217,7 +217,7 @@
 
                         <div class="card-body">
 
-                            <div class="invoice-1 detail">
+                            <div class="hd-payment invoice-1 detail">
                                 <h3>Payment Form</h3>
                                 <form role="form">
                                     <div class="card-body table-responsive p-0">
@@ -281,7 +281,7 @@
                                 </form>
                             </div>
 
-                            <div class="invoice-2 detail">
+                            <div class="hd-payment invoice-2 detail">
                                 <h3>Payment Form</h3>
                                 <form role="form">
                                     <div class="card-body table-responsive p-0">
@@ -340,12 +340,12 @@
                                     <!-- /.card-body -->
 
                                     <div class="card-footer">
-                                        <button class="btn btn-warning btn-pay">Pay</button>
+                                        <button class="btn btn-warning btn-pay" type="submit">Pay</button>
                                     </div>
                                 </form>
                             </div>
 
-                            <div class="invoice-3 detail">
+                            <div class="hd-payment invoice-3 detail">
                                 <h3>Payment Form</h3>
                                 <form role="form">
                                     <div class="card-body table-responsive p-0">
@@ -404,7 +404,7 @@
                                     <!-- /.card-body -->
 
                                     <div class="card-footer">
-                                        <button class="btn btn-warning btn-pay">Pay</button>
+                                        <button class="btn btn-warning btn-pay" type="submit">Pay</button>
                                     </div>
                                 </form>
                             </div>
@@ -598,16 +598,6 @@
     <script src="sweetalert2.all.min.js"></script>
     <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
-
-    <script>
-document.querySelector(".btn-pay").addEventListener('click', function(){
-    Swal.fire(
-  'Good job!',
-  'You clicked the button!',
-  'success'
-)
-});
-    </script>
 
 
 </body>
